@@ -7,6 +7,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Component
 public class AccountMapper {
@@ -24,6 +25,6 @@ public class AccountMapper {
         return  new Account().copy(accountDocument.getId().toString(), accountDocument.getName(), accountDocument.getValor(), accountDocument.getCheck(), accountDocument.getActive());
     }
     public List<Account> toAccount(List<AccountDocument> documents) {
-        return documents.stream().map(this::account).toList();
+        return documents.stream().map(this::account).collect(Collectors.toList());
     }
 }
